...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/saisie"
        style="@style/App_EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imagesearch"
        android:textColor="@color/redSearch"
        android:hint="@string/searchHint"/>

    <ImageButton
        android:id="@+id/imagesearch"
        android:layout_width="40dp"
...
